# Bafoka-teamZ

./: README.md
backend_merge/: .env  .gitignore  BOTPRESS_API_NODE_CONFIG.md  BOTPRESS_EXECUTE_CODE.md  BOTPRESS_QUICK_REF.md  BOTPRESS_VOICE_SETUP.md  DEBUG_VOICE_ISSUE.md  FIX_YOUR_FLOW.md  VOICE_COMMAND_GUIDE.md  VOICE_FIX_SUMMARY.md  app.py  botpress_guide.md  chain.py  core_logic.py  db.py  fake_bafoka.py  models.py  requirements.txt  test_api_fallback.py  test_bafoka_api.py  test_voice_endpoint.py  test_voice_simple.py
backend_merge/blockchain/: .env.blockchain.example  .env.example  .gitignore  deploy-whatsapp.js  env-template.txt  hardhat.config.js  package-lock.json  package.json  requirements-blockchain.txt  test-chatbot.js  test-local-server.js  test_backend.py  twilio-whatsapp-server.js  whatsapp-chatbot.js  whatsapp-conversation-script.md  whatsapp-flask-integration.py  whatsapp-server.js
backend_merge/bot/: __init__.py  app.py  bafoka_client.py  blockchain_utils.py  bot-try_commands.py  config.py  core_logic.py  fake_bafoka.py  fake_bafoka_api.py  models.py  nlu.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  voice_utils.py
backend_merge/bot/dev/: .env.example  __init__.py  api_client.py  app.py  bafoka_client.py  chain.py  core_logic.py  db.py  models.py
backend_merge/bot/dev/instance/: dev_whatsapp_app.db
backend_merge/bot/instance/: whatsapp_app.db
backend_merge/bot/routes/: botpress_routes.py
backend_merge/bot/services/: market_service.py  transcription_service.py  user_service.py  wallet_service.py
(+17 files in other folders)
