[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-merge"
version = "0.1.0"
description = "Backend for Bafoka teamZ"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "Flask>=2.0,<3.0",
  "SQLAlchemy>=1.4,<2.0",
  "Flask-SQLAlchemy>=3.0,<4.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "typeguard", "anyio"]